Fix tab-row content not wrapping the next row when there is enough room for it, ie: when table have less columns, the next row tries to inline with the previous row

--- a/webclient/style.css
+++ b/webclient/style.css
@@ -165,6 +165,9 @@ textarea {
 }
 
 
+.tab-row-wrapper{
+    display: block;
+}
 
 
 .tab-row{
